h264parse: ensure sufficiently sized buffer when wrapping NAL

Noted by <zhangyanping210@yahoo.com.cn>

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=682589